# Genetic-Snake-AI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
libs/game/: Cargo.toml
libs/game-wasm/: Cargo.toml
libs/game-wasm/src/: lib.rs
libs/game/src/: eye.rs  lib.rs  snake.rs
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: crossover_method.rs  lib.rs  mutation_method.rs  selection_method.rs  statistics.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: activation_function.rs  lib.rs  tests.rs
www/: index.html  index.js  package-lock.json  package.json  style.css
