[package]
name = "lib-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
nalgebra = "*"
lib-neural-network = { path = "../neural-network" }
lib-genetic-algorithm = { path = "../genetic-algorithm" }